"""
ASRBS Integration

Integration with ARIA Self-Recursive Benchmarking System for self-critique.
"""

import uuid
from dataclasses import dataclass
from typing import Optional

import httpx

from hermes.config import get_settings

settings = get_settings()


@dataclass
class ImprovementSuggestion:
    """A suggested improvement from ASRBS."""
    
    id: uuid.UUID
    category: str  # clarity, specificity, safety, structure
    severity: str  # low, medium, high
    description: str
    location: Optional[str]  # Line or section reference
    suggested_change: Optional[str]
    confidence: float
    rationale: str


@dataclass
class SelfCritiqueResult:
    """Result from an ASRBS self-critique run."""
    
    id: uuid.UUID
    prompt_id: uuid.UUID
    prompt_version: str
    overall_assessment: str
    quality_score: float
    suggestions: list[ImprovementSuggestion]
    knowledge_gaps: list[str]
    overconfidence_areas: list[str]
    training_data_needs: list[str]
    executed_at: str


class ASRBSClient:
    """Client for ASRBS self-critique service."""

    def __init__(self):
        self.grpc_url = settings.asrbs_grpc_url
        self.enabled = settings.asrbs_enabled
        self._client = httpx.AsyncClient(timeout=120.0)

    async def analyze_prompt(
        self,
        prompt_content: str,
        prompt_id: uuid.UUID,
        prompt_version: str,
        prompt_type: str,
    ) -> SelfCritiqueResult:
        """Analyze a prompt using ASRBS self-critique."""
        if not self.enabled:
            return self._mock_result(prompt_id, prompt_version, prompt_content)

        # TODO: Implement actual gRPC call to ASRBS
        return self._mock_result(prompt_id, prompt_version, prompt_content)

    def _mock_result(
        self,
        prompt_id: uuid.UUID,
        prompt_version: str,
        prompt_content: str,
    ) -> SelfCritiqueResult:
        """Generate mock self-critique result for testing."""
        from datetime import datetime
        import random

        suggestions = [
            ImprovementSuggestion(
                id=uuid.uuid4(),
                category="clarity",
                severity="medium",
                description="Consider adding more specific examples",
                location="Line 3-5",
                suggested_change="Add 2-3 concrete examples of expected behavior",
                confidence=0.85,
                rationale="Examples help models understand expected output format",
            ),
            ImprovementSuggestion(
                id=uuid.uuid4(),
                category="structure",
                severity="low",
                description="Could benefit from numbered sections",
                location=None,
                suggested_change="Use numbered sections for multi-step instructions",
                confidence=0.72,
                rationale="Numbered sections improve instruction following",
            ),
        ]

        return SelfCritiqueResult(
            id=uuid.uuid4(),
            prompt_id=prompt_id,
            prompt_version=prompt_version,
            overall_assessment="Good prompt with room for improvement in clarity",
            quality_score=random.uniform(0.75, 0.9),
            suggestions=suggestions,
            knowledge_gaps=["Edge case handling for empty inputs"],
            overconfidence_areas=["May overestimate ability on complex nested logic"],
            training_data_needs=["More examples of error handling patterns"],
            executed_at=datetime.utcnow().isoformat(),
        )

    async def get_improvement_history(
        self,
        prompt_id: uuid.UUID,
    ) -> list[SelfCritiqueResult]:
        """Get history of self-critique analyses for a prompt."""
        # TODO: Implement history retrieval
        return []

    async def apply_suggestion(
        self,
        prompt_content: str,
        suggestion: ImprovementSuggestion,
    ) -> str:
        """Apply a suggestion to prompt content automatically."""
        # TODO: Implement automatic suggestion application
        return prompt_content

    async def close(self):
        """Close HTTP client."""
        await self._client.aclose()
